# foxtail

./: .gitignore  Cargo.toml  README.md  example_colors.toml  install.sh  test-install.sh  test-statusline.sh  test_colors.sh  unicode_output.py  uninstall.sh
.github/workflows/: release.yml
src/: cli.rs  colors.rs  config.rs  git.rs  main.rs  render.rs  tests.rs  types.rs
version-check/: Cargo.toml  README.md
