[workspace]
members = ["."]

[package]
name = "foxtail"
version = "0.1.2"
edition = "2021"
description = "Status line for Claude Code users at Mozilla"
repository = "https://github.com/padenot/foxline"
homepage = "https://github.com/padenot/foxline"
license = "MIT OR Apache-2.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
nu-ansi-term = "0.50"
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
moz-cli-version-check = "0.1"

[[bin]]
name = "foxtail"
path = "src/main.rs"
